# openclaw-librarian-agent

./: .env.example  .gitignore  AGENTS.md  BOOT.md  CLAUDE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  Makefile  README.md  SOUL.md  TOOLS.md  docker-compose.yml  mix.exs
.archgate/adrs/: ARCH-001-two-stage-pipeline.md  ARCH-002-vault-storage.md  ARCH-003-zero-install-containers.md  ARCH-004-debounce-strategy.md  ARCH-005-backup-before-overwrite.md  ARCH-006-pipeline-testing.md  ARCH-007-atlassian-integration.md
.github/workflows/: ci.yml
config/: config.exs  prod.exs  runtime.exs  test.exs
memory/: 2026-03-31.md
scripts/: daily-report.sh  healthcheck.sh  process-input.sh  setup.sh
skills/: document_archive.json  document_archive.md  document_archive.sh
spec/: API.md  ARCHITECTURE.md  COMMUNICATION.md  CRON.md  LEARNINGS.md  LIBRARIES.md.example  PIPELINES.md  PROTOCOL.md  SAFETY.md  STRUCTURE.md  TESTING.md  TROUBLESHOOTING.md
test/: atlassian_cache_test.exs  atlassian_client_test.exs  atlassian_confluence_test.exs  atlassian_jira_test.exs  indexer_test.exs  librarian_test.exs  processor_test.exs  staging_test.exs  test_helper.exs  vault_backup_test.exs
tools/pipeline_runner/: Dockerfile  pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  cli.py
tools/pipeline_runner/pipeline_runner/pipelines/: __init__.py  archgate_check.py  document_processing.py  indexing.py  reporting.py  test_suite.py
tools/pipeline_runner/pipeline_runner/runners/: __init__.py  docker.py
tools/pipeline_runner/tests/: test_pipelines.py  test_runner.py
(+20 files in other folders)
